--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         <a class="nav-link active" href="{% url 'house' %}">Houses</a>
+                        <a class="nav-link active" href="{% url 'travel' %}">Travels</a>
                         <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
                     </div>
                 </div>
