changed travel files

--- a/templates/travel/food.html
+++ b/templates/travel/food.html
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ food.name | upper }}</h5>
                     <p class="card-text mb-3">{{ food.description }}</p>
-                    <h6 class="card-text">{{ food.address }}</h6>
+                    <h6 class="card-text">Address: {{ food.address }}</h6>
                     <a href="#" class="btn btn-primary">View</a>
                 </div>
             </div>
