--- a/templates/travel/travel.html
+++ b/templates/travel/travel.html
@@ -26,7 +26,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ travel.name | upper }}</h5>
                     <p class="card-text mb-3">{{ travel.description }}</p>
-                    <h6 class="card-text">{{ travel.address }}</h6>
+                    <h6 class="card-text">Address: {{ travel.address }}</h6>
                     <a href="#" class="btn btn-primary">View</a>
                 </div>
             </div>
