--- a/templates/travel/trip.html
+++ b/templates/travel/trip.html
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ trip.name | upper }}</h5>
                     <p class="card-text mb-3">{{ trip.description }}</p>
-                    <h6 class="card-text">{{ trip.address }}</h6>
+                    <h6 class="card-text">Address: {{ trip.address }}</h6>
                     <a href="#" class="btn btn-primary">View</a>
                 </div>
             </div>
