--- a/templates/house/house.html
+++ b/templates/house/house.html
@@ -9,6 +9,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     <a class="nav-link active" href="{% url 'house' %}">Houses</a>
+                    <a class="nav-link active" href="{% url 'travel' %}">Travels</a>
                     <a class="nav-link active" href="{% url 'courtyard' %}">Courtyards</a>
                     <a class="nav-link active" href="{% url 'apartment' %}">Apartments </a>
                     <a class="nav-link active" href="{% url 'contract' %}">Contract</a>
