--- a/templates/travel/library.html
+++ b/templates/travel/library.html
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ library.name | upper }}</h5>
                     <p class="card-text mb-3">{{ library.description }}</p>
-                    <h6 class="card-text">{{ library.address }}</h6>
+                    <h6 class="card-text">Address: {{ library.address }}</h6>
                     <a href="#" class="btn btn-primary">View</a>
                 </div>
             </div>
